# engine_old

./: .codacy.yml  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  Config.h.in  EngineConfig.h.in  engine.sln
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml
engine/: Actor.h  Camera.h  Client.cpp  Config.h  FrameTicker.h  Input.h  Mesh.h  Model.h  Object.cc  Object.h  Planet.h  Player.h  Server.cpp  ShaderProgram.cc  ShaderProgram.h  Source.cpp  Texture.h  TextureManager.h  Ticker.h  config.json  core.h  defines.h  engine.vcxproj  engine.vcxproj.filters  triangle.frag  triangle.vert
engine/content/code/Objects/: Fractal.h
engine/content/code/Render/: FractalRenderer.h
engine/content/shaders/: clouds.frag  triangle.frag  triangle.vert
engine/core/: Actor.h  Core.cpp  Core.h  FrameTicker.h  Object.cc  Object.h  Player.h  Ticker.h  core.h  exceptions.h
engine/core/client/: ActorTicker.h  Player.h
engine/core/client/misc/: Input.cpp  Input.h  Window.h
engine/core/client/render/: Camera.h  Render.h
engine/core/input/: Input.cpp  Input.h
engine/core/misc/: CallbackWrapper.h  Input.cpp  Input.h  Window.cpp  Window.h
engine/engine/: Config.h  Core.cpp  Core.h  Object.cpp  Object.h  Ticker.h
engine/engine/client/: FrameTicker.h  Player.h
engine/engine/client/misc/: Input.cpp  Input.h  Window.cpp  Window.h
engine/engine/client/render/: Actor.h  Camera.cpp  Camera.h  Mesh.h  Render.h  RenderCore.h  Renderable.h  Renderer.h  Shader.cpp  Shader.h  Texture.h
engine/engine/utils/: SharedPointer.h
engine/header_libs/: stb_image.h
engine/header_libs/hash/: xxh3.h  xxhash.h
engine/render/: Camera.h  render.h
engine/render/Model/: Mesh.h  Model.h
engine/render/Shader/: ShaderProgram.cc  ShaderProgram.h  ShaderWorker.h
engine/render/Texture/: Texture.h  TextureManager.h
engine/render/misc/: Camera.cpp  Camera.h  Window.cpp  Window.h
engine/subsystems/render/detail/: opaque-render-system.cpp  opaque-render-system.hpp
tests/: tests.vcxproj
